# proof-client

./: LICENSE  README.md  justfile  v1-openapi.json
circuits/chacha20/: verification_key.json
circuits/multiplier2/: input.json  verification_key.json
circuits/valid_tap/: circuit.circom  input.json  verification_key.json
js/ppd-api-client/: README.md  package.json
js/ppd-api-client/.openapi-generator/: FILES
js/ppd-api-client/src/apis/: BlueprintApi.ts  CoSnarkBlueprintApi.ts  DashboardApi.ts  HealthApi.ts  JobApi.ts  NPSApi.ts  UserApi.ts  index.ts
js/ppd-api-client/src/models/: ApiError.ts  AuxiliaryType.ts  BlueprintCurve.ts  CreateBlueprintRequest.ts  CreateBlueprintResponse.ts  JobStatus.ts  NpsHeader.ts  NpsKeyMaterial.ts  ProofResult.ts  RegisterNpsRequest.ts  RegisterNpsResponse.ts  ScheduleJobRequest.ts  ScheduleJobResponse.ts  index.ts
js/ppd-client/: README.md  build.sh  index.d.ts  index.ts  package.json  tsconfig.json
js/ppd-wasm/: Cargo.toml  LICENSE_MIT  build.sh
js/ppd-wasm/src/: lib.rs
js/taceo-proof-api-client/: README.md  package-lock.json  package.json
js/taceo-proof-api-client/.openapi-generator/: FILES
js/taceo-proof-api-client/src/: runtime.ts
js/taceo-proof-api-client/src/apis/: AdminApi.ts  BlueprintApi.ts  DashboardApi.ts  HealthApi.ts  JobApi.ts  NPSApi.ts  UserApi.ts  index.ts
js/taceo-proof-api-client/src/models/: ApiError.ts  AuxiliaryType.ts  BlueprintCurve.ts  BlueprintReadyProbe.ts  BlueprintType.ts  CreateBlueprintResponse.ts  IssueCoSnarkCodeRequest.ts  JobResult.ts  JobStatus.ts  JobType.ts  NpsHeader.ts  NpsKeyMaterial.ts  PaginationResultNpsHeader.ts  PaginationResultNpsHeaderElementsInner.ts  PaginationResultString.ts  (+4 more)
js/taceo-proof-client/: .gitignore  Cargo.toml  build.sh  index.ts  package-lock.json  package.json  tsconfig.json
js/taceo-proof-client/examples/: taceo-proof-client.ts
js/taceo-proof-wasm/: Cargo.toml  build.sh
react/taceo-proof-app/: next.config.ts  package-lock.json  package.json
react/taceo-proof-app/src/: witness-calculator.js
rust/ppd-api-client/: Cargo.toml  README.md
rust/ppd-api-client/.openapi-generator/: FILES
rust/ppd-api-client/docs/: AuxiliaryType.md  BlueprintApi.md  BlueprintCurve.md  BlueprintReadyProbe.md  CoSnarkBlueprintApi.md  CreateBlueprintRequest.md  CreateBlueprintResponse.md  IssueCoSnarkCodeRequest.md  JobApi.md  JobResult.md  JobStatus.md  NpsApi.md  NpsHeader.md  NpsKeyMaterial.md  RegisterNpsRequest.md  RegisterNpsResponse.md  ScheduleJobRequest.md  ScheduleJobResponse.md  UserApi.md
rust/ppd-client/: Cargo.toml
rust/ppd-client/examples/: ppd-client.rs
rust/ppd-client/src/: lib.rs
rust/taceo-proof-api-client/: Cargo.toml  README.md
rust/taceo-proof-api-client/.openapi-generator/: FILES
rust/taceo-proof-api-client/docs/: AdminApi.md  ApiError.md  BlueprintApi.md  BlueprintReadyProbe.md  BlueprintType.md  CreateBlueprintRequest.md  CreateBlueprintResponse.md  DashboardApi.md  HealthApi.md  JobApi.md  JobStatus.md  JobType.md  NpsApi.md  PaginationResultNpsHeader.md  PaginationResultNpsHeaderElementsInner.md  PaginationResultString.md  ProofResult.md  RegisterNpsRequest.md  RegisterNpsResponse.md  ScheduleJobRequest.md  ScheduleJobResponse.md  UserApi.md
rust/taceo-proof-api-client/src/: lib.rs
rust/taceo-proof-client/: Cargo.toml
rust/taceo-proof-client/examples/: taceo-proof-client.rs
rust/taceo-proof-client/src/: lib.rs
(+54 files in other folders)
