[package]
name = "ppd-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["TACEO GmbH <hello@taceo.io>"]
homepage = "https://www.taceo.io"
repository = "https:://github.com/TaceoLabs/ppd-network"
license = "MIT OR Apache-2.0"
publish = false
readme = "./README.md"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ark-bn254 = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-bls12-377 = "0.5.0"
ark-ec = "0.5.0"
wasm-bindgen = "0.2.100"
serde-wasm-bindgen = "0.6.5"
bincode = { version = "1.3.3", default-features = false }
crypto_box = { version = "0.9.1", features = ["seal"] }
co-circom-types = { git = "https://github.com/TaceoLabs/co-snarks", rev = "36d73df" }
circom-types = { git = "https://github.com/TaceoLabs/co-snarks", rev = "36d73df", features = ["ark-bls12-377", "ark-bls12-381"] }
base64ct = { version = "1.7.3", features = ["alloc"] }
rand = "0.8.5"
getrandom = { version = "0.2.15", default-features = false, features = ["js"] }

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]


